# pico-projects

./: ._gdbinit  .gitattributes  .sublime-project  CMakeLists.txt  README.md
asm_experiments/: CMakeLists.txt
asm_experiments/gcd/: CMakeLists.txt  gcd.S  gcd.c  gcd.h
asm_experiments/led/: CMakeLists.txt  README.md  led.S  led.c  led.h
dht22/: CMakeLists.txt  README.md  dht22.c  dht22.fzz  dht22.h  dht22.pio  lcd.c  lcd.fzz  lcd.h  lcd.pio  main.c
dht22/media/: dht22_schematic.fzz
hello_pio/: CMakeLists.txt  hello.c  hello.pio
infrared_nec/: CMakeLists.txt  infrared.c  nec.pio
infrared_nec_wifi/: CMakeLists.txt  infrared_wifi.c  nec.pio
lcd_animation/: CMakeLists.txt  README.md  lcd.fzz  lcd_animation.c
lcd_pio/: -home-kennedn-Projects-pico-projects-multi_pio-.txt  CMakeLists.txt  lcd.c  lcd.pio
lcd_scroll/: CMakeLists.txt  README.md  lcd.pio  lcd_scroll.c
multi_pio/: CMakeLists.txt  hello.pio  multi.c  shift.pio
rgb_pio/: CMakeLists.txt  rgb.c  rgb.pio
shift_register/: CMakeLists.txt  README.md  shift.c
shift_register_pio/: CMakeLists.txt  shift_register.c  shift_register.pio
uart/: CMakeLists.txt  uart.c
uart_scanf/: CMakeLists.txt  uart_scanf.c
